--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "license": "MIT",
   "type": "module",
   "dependencies": {
-    "prompt": "^1.2.0",
-    "readline": "^1.3.0"
+    "prompt": "^1.2.0"
   },
   "devDependencies": {
     "eslint": "^8.1.0"
