--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "main": "index.js",
   "license": "MIT",
   "type": "module",
+  "scripts": {
+    "start": "node index.js",
+    "test": "node --experimental-vm-modules ./node_modules/.bin/jest"
+  },
   "dependencies": {
     "prompt": "^1.2.0"
   },
   "devDependencies": {
-    "eslint": "^8.1.0"
+    "eslint": "^8.1.0",
+    "jest": "^27.3.1"
   }
 }
